# pixit

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: app.rs  main.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/render/: Cargo.toml
crates/render/shader/: frag.glsl  render.wgsl  vert.glsl
crates/render/src/: camera.rs  lib.rs  light.rs  scene.rs  shader.rs  texture.rs
src/: app.rs  camera.rs  custom3d_wgpu_shader.wgsl  lib.rs  main.rs  model.rs  render.rs  render.wgsl
