[package]
name = "pixit"
version = "0.1.0"
authors = ["keith <keithroe@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "native-unknown-unknown"]

[dependencies]
egui = "0.30"
eframe = { version = "0.30.0", default-features = false, features = [
        "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
        "default_fonts", # Embed the default egui fonts.
        "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
        "persistence",   # Enable restoring app state when restarting the app.
        "x11",       # To support Linux (and CI)
] }
egui_extras = { version = "0.30.0", features = [
        "all_loaders",
] }
log = "0.4"

# You only need serde if you want app persistence:
env_logger = "0.11"
egui_flex = "0.2.0"
wgpu = { version = "*", features = ["glsl"] }
bytemuck = "1.21.0"
gltf = "1.4.1"
glam = { version = "0.29.2", features = ["bytemuck"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

