[package]
name = "pixit-app"
version = "0.1.0"
authors = ["keith <keithroe@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"


[dependencies]
glam = { workspace = true }
wgpu = { workspace = true }
egui = "0.30"
eframe = { version = "0.30.0", default-features = false, features = [
	"accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
        "default_fonts", # Embed the default egui fonts.
        "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
        "persistence",   # Enable restoring app state when restarting the app.
        "x11",           # To support Linux (and CI)
] }
egui_flex = "0.2.0"
env_logger = "0.11"
#egui_extras = { version = "0.30.0", features = [
#        "all_loaders",
#] }
