[package]
name = "render"
version = "0.1.0"
authors = ["keith <keithroe@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[dependencies]
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }

model = { path = "../model" }


